feat: implement full-stack project scaffold with Java backend, React dashboard, and Docker containerization